--- a/main.css
+++ b/main.css
@@ -351,3 +351,35 @@ body {
     border: 1px solid #eee;
     transition: 5s --progress;
 }
+
+#面部识别,
+#舌相抓取,
+#步态记录,
+#患者自述 {
+    display: grid;
+    grid-template-rows: repeat(7,1fr); /* 利用网格布局实现上下平均分配空间 */
+    /* flex-direction: column; */
+    justify-content: center;
+    height: 100%;
+}
+
+.icon {
+    transform: scale(0.6, 0.6);
+    transform-origin: top;
+    position: relative;
+    /* 保持相对定位 */
+    grid-row-start: fr;
+    grid-row-end: 7fr;
+    max-width: 100%;
+    max-height: 100%;
+    width: 9em;
+    /* border: 1px solid black; */
+}
+
+.video_title {
+    grid-row-start: 1fr;
+    grid-row-end: 2fr;
+    font-size: 4vh;
+    font-weight: bold;
+    /* border: 1px solid black; */
+}
